# colorful-nails

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tailwind.config.js
.sqlx/: query-220798e78d384643883da58033ad7b3e25a0178879edd1b9306a07718ea26e8b.json  query-2e856c3aac0208cff82a2b5aedfe6eafd52ad83f49e061ad72e8e9da0d037454.json  query-32b4ad5e29f77466934caf5b46ae9e84d8e2663d2bd0eb7e7760f508fd14c352.json  query-c625a657a9ad8848de9f05c11979992be25ed1f868008c4baea90db399793dd4.json  query-ff96c35f707f968f74fa9ed8168d5e36565b29af7f534d11d7b57574bbb56c0e.json
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: alert.rs  badge.rs  button.rs  card.rs  empty_state.rs  footer.rs  header.rs  input.rs  mod.rs  nail_bottle.rs  nav_btn.rs  skeleton.rs  swatch_strip.rs
app/src/pages/: booking.rs  design.rs  home.rs  mod.rs  services.rs  success.rs
frontend/: Cargo.toml  README.md  Session.vim  index.html  rust-analyzer.toml  tailwind.config.js
frontend/public/: styles.scss  tailwind.css
frontend/src/: lib.rs  main.rs
frontend/src/components/: errors.rs  header.rs  menu.rs  mod.rs  nav_btn.rs
frontend/src/pages/: booking.rs  home.rs  mod.rs  services.rs
migrations/: 20260602170730_create_appointments.sql
public/: tailwind.css
server/: Cargo.toml
server/migrations/: 20260602170730_create_appointments.sql
server/src/: booking.rs  lib.rs  main.rs  telegram.rs
