[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos_axum = { workspace = true, optional = true }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

cfg-if.workspace = true
http.workspace = true
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["dep:leptos_axum", "leptos_meta/ssr", "leptos_router/ssr", "leptos/ssr"]

[lints]
workspace = true
