[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos_axum = { workspace = true, optional = true }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

cfg-if.workspace = true
http.workspace = true
thiserror.workspace = true

chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { workspace = true, optional = true }
uuid = { version = "1.23.2", features = [
  "serde",
] }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:leptos_axum",
  "dep:sqlx",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/ssr"
]

[lints]
workspace = true
