[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

axum.workspace = true
log.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

dotenvy = "0.15.7"
lettre = { version = "0.11.22", features = [
  "builder",
  "smtp-transport",
  "tokio1",
  "tokio1-native-tls"
] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true

[lints]
workspace = true
